--- a/pepper/templates/emails/application_decisions/confirmed_invite.html
+++ b/pepper/templates/emails/application_decisions/confirmed_invite.html
@@ -13,7 +13,7 @@
     </tr>
     <tr>
         <td class="content-block">
-            See you October 28!
+            See you {{ config.EVENT_START }}!
         </td>
     </tr>
     <tr>
