--- a/pepper/templates/emails/application_decisions/rejected.html
+++ b/pepper/templates/emails/application_decisions/rejected.html
@@ -7,9 +7,9 @@
     </tr>
     <tr>
         <td class="content-block">
-            We've got bad news. Unfortunately, we have run out of space and will be unable to accept you for HackTX this
+            We've got bad news. Unfortunately, we have run out of space and will be unable to accept you for {{ config.HACKATHON_NAME }} this
             year, so we have removed you from our waitlist. We'd love for you to join us for our spring hackathon or
-            HackTX next year.
+            {{ config.HACKATHON_NAME }} next year.
         </td>
     </tr>
     <tr>
