--- a/pepper/templates/emails/application_decisions/round2.html
+++ b/pepper/templates/emails/application_decisions/round2.html
@@ -12,12 +12,12 @@
 </tr>
 <tr>
   <td class="content-block">
-    If you got accepted, congrats! You will need to fill out the forms on <a href="{{ config.BASE_URL }}">my{{ config.HACKATHON_NAME }}</a> to confirm that you are going. We hope to see you on October 28!
+    If you got accepted, congrats! You will need to fill out the forms on <a href="{{ config.BASE_URL }}">my{{ config.HACKATHON_NAME }}</a> to confirm that you are going. We hope to see you on {{ config.EVENT_START }}!
   </td>
 </tr>
 <tr>
   <td class="content-block">
-    If you are still waitlisted, don't worry. This decision is not a reflection of your resume or your experience level. If you live in the Austin metro area, we encourage you to try to walk-in on the day of {{ config.HACKATHON_NAME }}, October 28. Please check the application status page for more details on how walk-ins work.
+    If you are still waitlisted, don't worry. This decision is not a reflection of your resume or your experience level. If you live in the Austin metro area, we encourage you to try to walk-in on the day of {{ config.HACKATHON_NAME }}, {{ config.EVENT_START }}. Please check the application status page for more details on how walk-ins work.
   </td>
 </tr>
 <tr>
