--- a/pepper/templates/emails/application_decisions/waitlisted.html
+++ b/pepper/templates/emails/application_decisions/waitlisted.html
@@ -7,12 +7,12 @@
     </tr>
     <tr>
       <td class="content-block">
-        Thank you for taking the time to apply to HackTX. Your application has been waitlisted.
+        Thank you for taking the time to apply to {{ config.HACKATHON_NAME }}. Your application has been waitlisted.
       </td>
     </tr>
     <tr>
       <td class="content-block">
-        Applications for HackTX are first-come, first-serve for teams and randomized for individuals. This decision is not a reflection of your resume or your experience level. We simply take that information to run our own internal metrics and share your resume with companies who are recruiting. Cross your fingers though! There will be a second round of acceptances on October 17th. If you live in the Austin metro area, we encourage you to try to walk-in on the day of HackTX, October 28.
+        Applications for {{ config.HACKATHON_NAME }} are first-come, first-serve for teams and randomized for individuals. This decision is not a reflection of your resume or your experience level. We simply take that information to run our own internal metrics and share your resume with companies who are recruiting. Cross your fingers though! There will be a second round of acceptances on October 17th. If you live in the Austin metro area, we encourage you to try to walk-in on the day of {{ config.HACKATHON_NAME }}, {{ config.EVENT_START }}.
       </td>
     </tr>
     <tr>
