--- a/pepper/templates/emails/corporate_welcome.html
+++ b/pepper/templates/emails/corporate_welcome.html
@@ -7,15 +7,9 @@
     </tr>
     <tr>
         <td class="content-block">
-            Thanks for joining us for {{ config.HACKATHON_NAME }} 2016! You now have access to
+            Thanks for joining us for {{ config.EVENT_NAME }}! You now have access to
             my{{ config.HACKATHON_NAME }}, a secure portal to download resumes and filter by major, school, or class
             standing.
-        </td>
-    </tr>
-    <tr>
-        <td class="content-block">
-            Because we have so many resumes (over 1,800 of them), we will only keep this portal open until November 18,
-            2016. Please make sure to download and search for any resumes before then!
         </td>
     </tr>
     <tr>
