Changed pepper open-source link

--- a/pepper/templates/layouts/base.html
+++ b/pepper/templates/layouts/base.html
@@ -43,7 +43,7 @@
                                                        src="{{ url_for('static', filename='branding/badge.svg') }}"
                                                        width=50></a>
             <p class="center">Interested in how this works? HackTX proudly open sourced <a
-                    href="https://github.com/rohitdatta/pepper" class="decorate">Pepper</a> for you to use at your own
+                    href="https://github.com/hacktx/pepper" class="decorate">Pepper</a> for you to use at your own
                 hackathon.</p>
         </div>
     </footer>
