--- a/pepper/static/scss/_constants.scss
+++ b/pepper/static/scss/_constants.scss
@@ -1,13 +1,9 @@
-$dark: #22215b;
-$light: #009999;
-$freetail-blue: #00a8ff;
-$freetail-tan: #EAF0CE;
-$hacktx-light: #bbb9ea;
+$dark: #4A78BA;
+$hacktx-light: #FFFFFF;
 $hacktx-yellow: #ffaa3a;
 $hacktx-light-red: #dc0925;
-$hacktx-red: #ff0b63;
+$hacktx-red: #FF4115;
 $hacktx-gradient: linear-gradient(135deg, $hacktx-yellow, $hacktx-red);
-$freetail-red: #E45243;
 $hacktx-light-blue: #5983A0;
 $sans-serif-font: Josefin Sans, sans-serif;
 $desktop-width: 992px;
