--- a/pepper/templates/users/dashboard/pending.html
+++ b/pepper/templates/users/dashboard/pending.html
@@ -27,6 +27,7 @@
                     You can still be accepted if you complete our puzzle challenge over here.
                 </p>
             {% endif %}
+        </div>
     </div>
     {% else %}
     <div class="text-center col-md-8 col-md-offset-2 large-text">
