--- a/pepper/templates/layouts/head.html
+++ b/pepper/templates/layouts/head.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{{ config.HACKATHON_NAME }}{% endblock %}</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://hacktx.com/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://hacktx.com/assets/favicon-16x16.png">
-    <link rel="mask-icon" href="https://hacktx.com/assets/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='branding/icon/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='branding/icon/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='branding/icon/favicon-16x16.png.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='branding/icon/site.webmanifest') }}">
+    <link rel="mask-icon" href="{{ url_for('static', filename='branding/icon/safari-pinned-tab.svg') }}" color="#5bbad5">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='branding/icon/favicon.ico') }}">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="{{ url_for('static', filename='branding/icon/apple-touch-icon.png') }}/assets/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
