--- a/pepper/templates/layouts/base.html
+++ b/pepper/templates/layouts/base.html
@@ -29,6 +29,11 @@
         </nav>
     {% endif %}
 
+    <div class="contact">
+        Something not right? Reach out to us at
+        <a href="mailto:tech@freetailhackers.com">tech@freetailhackers.com</a>!
+    </div>
+
     <div class="container">
 
         <div class="content">
