--- a/pepper/static/scss/main.scss
+++ b/pepper/static/scss/main.scss
@@ -662,3 +662,16 @@ input[type=text].fullwidth {
     }
   }
 }
+
+.contact{
+  background: $hacktx-light-blue;
+  box-shadow: 0px 3px 3px rgba(0,0,0,.2);
+  text-align: right;
+  position: fixed;
+  bottom: 3em;
+  right: 0;
+  max-width: 300px;
+  z-index: 100;
+  padding: 1em;
+
+}
