--- a/pepper/static/scss/_constants.scss
+++ b/pepper/static/scss/_constants.scss
@@ -1,8 +1,8 @@
-$dark: #4A78BA;
+$dark: #213e5b;
 $hacktx-light: #FFFFFF;
 $hacktx-light-red: #dc0925;
 $hacktx-red: #FF4115;
-$hacktx-light-blue: #5983A0;
+$hacktx-light-blue: #7ba8f9;
 $sans-serif-font: Josefin Sans, sans-serif;
 $desktop-width: 992px;
 $hacktx-gray: #bfbfbf;
