--- a/pepper/static/css/dataTable.css
+++ b/pepper/static/css/dataTable.css
@@ -58,7 +58,7 @@ table.dataTable thead .sorting_desc_disabled {
   background-image: url("https://cdn.datatables.net/1.10.16/images/sort_desc_disabled.png");
 }
 table.dataTable tbody tr {
-  background-color: #4A78BA;
+  background-color: #213e5b;
 }
 table.dataTable tbody tr.selected {
   background-color: #b0bed9;
@@ -88,13 +88,13 @@ table.dataTable.cell-border tbody tr:first-child td {
   border-top: none;
 }
 table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
-  background-color: #4875b6;
+  background-color: #203d59;
 }
 table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected {
   background-color: #acbad4;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
-  background-color: #4774b3;
+  background-color: #203c58;
 }
 table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:hover.selected {
   background-color: #aab7d1;
@@ -104,7 +104,7 @@ table.dataTable.order-column tbody tr > .sorting_2,
 table.dataTable.order-column tbody tr > .sorting_3, table.dataTable.display tbody tr > .sorting_1,
 table.dataTable.display tbody tr > .sorting_2,
 table.dataTable.display tbody tr > .sorting_3 {
-  background-color: #4976b6;
+  background-color: #203d59;
 }
 table.dataTable.order-column tbody tr.selected > .sorting_1,
 table.dataTable.order-column tbody tr.selected > .sorting_2,
@@ -114,13 +114,13 @@ table.dataTable.display tbody tr.selected > .sorting_3 {
   background-color: #acbad5;
 }
 table.dataTable.display tbody tr.odd > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd > .sorting_1 {
-  background-color: #4672b0;
+  background-color: #1f3b56;
 }
 table.dataTable.display tbody tr.odd > .sorting_2, table.dataTable.order-column.stripe tbody tr.odd > .sorting_2 {
-  background-color: #4772b1;
+  background-color: #1f3b57;
 }
 table.dataTable.display tbody tr.odd > .sorting_3, table.dataTable.order-column.stripe tbody tr.odd > .sorting_3 {
-  background-color: #4773b3;
+  background-color: #203c57;
 }
 table.dataTable.display tbody tr.odd.selected > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.selected > .sorting_1 {
   background-color: #a6b4cd;
@@ -132,13 +132,13 @@ table.dataTable.display tbody tr.odd.selected > .sorting_3, table.dataTable.orde
   background-color: #a9b7d1;
 }
 table.dataTable.display tbody tr.even > .sorting_1, table.dataTable.order-column.stripe tbody tr.even > .sorting_1 {
-  background-color: #4976b6;
+  background-color: #203d59;
 }
 table.dataTable.display tbody tr.even > .sorting_2, table.dataTable.order-column.stripe tbody tr.even > .sorting_2 {
-  background-color: #4977b8;
+  background-color: #213d5a;
 }
 table.dataTable.display tbody tr.even > .sorting_3, table.dataTable.order-column.stripe tbody tr.even > .sorting_3 {
-  background-color: #4a78b9;
+  background-color: #213e5b;
 }
 table.dataTable.display tbody tr.even.selected > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.selected > .sorting_1 {
   background-color: #acbad5;
@@ -150,13 +150,13 @@ table.dataTable.display tbody tr.even.selected > .sorting_3, table.dataTable.ord
   background-color: #afbdd8;
 }
 table.dataTable.display tbody tr:hover > .sorting_1, table.dataTable.order-column.hover tbody tr:hover > .sorting_1 {
-  background-color: #446eab;
+  background-color: #1e3954;
 }
 table.dataTable.display tbody tr:hover > .sorting_2, table.dataTable.order-column.hover tbody tr:hover > .sorting_2 {
-  background-color: #446fac;
+  background-color: #1f3954;
 }
 table.dataTable.display tbody tr:hover > .sorting_3, table.dataTable.order-column.hover tbody tr:hover > .sorting_3 {
-  background-color: #4570ae;
+  background-color: #1f3a55;
 }
 table.dataTable.display tbody tr:hover.selected > .sorting_1, table.dataTable.order-column.hover tbody tr:hover.selected > .sorting_1 {
   background-color: #a2aec7;
@@ -379,12 +379,12 @@ table.dataTable td {
   text-align: center;
   font-size: 1.2em;
   background-color: white;
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(74, 120, 186, 0)), color-stop(25%, rgba(74, 120, 186, 0.9)), color-stop(75%, rgba(74, 120, 186, 0.9)), color-stop(100%, rgba(255, 255, 255, 0)));
-  background: -webkit-linear-gradient(left, rgba(74, 120, 186, 0) 0%, rgba(74, 120, 186, 0.9) 25%, rgba(74, 120, 186, 0.9) 75%, rgba(74, 120, 186, 0) 100%);
-  background: -moz-linear-gradient(left, rgba(74, 120, 186, 0) 0%, rgba(74, 120, 186, 0.9) 25%, rgba(74, 120, 186, 0.9) 75%, rgba(74, 120, 186, 0) 100%);
-  background: -ms-linear-gradient(left, rgba(74, 120, 186, 0) 0%, rgba(74, 120, 186, 0.9) 25%, rgba(74, 120, 186, 0.9) 75%, rgba(74, 120, 186, 0) 100%);
-  background: -o-linear-gradient(left, rgba(74, 120, 186, 0) 0%, rgba(74, 120, 186, 0.9) 25%, rgba(74, 120, 186, 0.9) 75%, rgba(74, 120, 186, 0) 100%);
-  background: linear-gradient(to right, rgba(74, 120, 186, 0) 0%, rgba(74, 120, 186, 0.9) 25%, rgba(74, 120, 186, 0.9) 75%, rgba(74, 120, 186, 0) 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(33, 62, 91, 0)), color-stop(25%, rgba(33, 62, 91, 0.9)), color-stop(75%, rgba(33, 62, 91, 0.9)), color-stop(100%, rgba(255, 255, 255, 0)));
+  background: -webkit-linear-gradient(left, rgba(33, 62, 91, 0) 0%, rgba(33, 62, 91, 0.9) 25%, rgba(33, 62, 91, 0.9) 75%, rgba(33, 62, 91, 0) 100%);
+  background: -moz-linear-gradient(left, rgba(33, 62, 91, 0) 0%, rgba(33, 62, 91, 0.9) 25%, rgba(33, 62, 91, 0.9) 75%, rgba(33, 62, 91, 0) 100%);
+  background: -ms-linear-gradient(left, rgba(33, 62, 91, 0) 0%, rgba(33, 62, 91, 0.9) 25%, rgba(33, 62, 91, 0.9) 75%, rgba(33, 62, 91, 0) 100%);
+  background: -o-linear-gradient(left, rgba(33, 62, 91, 0) 0%, rgba(33, 62, 91, 0.9) 25%, rgba(33, 62, 91, 0.9) 75%, rgba(33, 62, 91, 0) 100%);
+  background: linear-gradient(to right, rgba(33, 62, 91, 0) 0%, rgba(33, 62, 91, 0.9) 25%, rgba(33, 62, 91, 0.9) 75%, rgba(33, 62, 91, 0) 100%);
 }
 .dataTables_wrapper .dataTables_length,
 .dataTables_wrapper .dataTables_filter,
