--- a/pepper/templates/users/complete_registration_form_fields.html
+++ b/pepper/templates/users/complete_registration_form_fields.html
@@ -1,6 +1,8 @@
 <script src="{{ url_for('static', filename='js/confirm.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.validate.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/validate.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dropdown.js') }}"></script>
+
 <div class="row">
     <h3 {% if required %}class="required"{% endif %}>Resume</h3>
     <div class="col-md-6 form-info">
