Changed email addresses from @hacktx to @freetailhackers

--- a/pepper/templates/emails/welcome.html
+++ b/pepper/templates/emails/welcome.html
@@ -345,7 +345,7 @@
                                                 href="https://go.hacktx.com">go.hacktx.com</a>. <strong>Please note that
                                             due to new UT Austin regulations, you must bring a government ID in addition
                                             to your student ID</strong>. This should include everything you need, if
-                                        not, give us a holler via email <a href="mailto:hello@hacktx.com">hello@hacktx.com</a>
+                                        not, give us a holler via email <a href="mailto:hello@freetailhackers.com">hello@freetailhackers.com</a>
                                         and we’ll do our best to answer!
                                     </td>
                                 </tr>
@@ -425,7 +425,7 @@
                         <tr>
                             <td class="aligncenter content-block">You are receiving this because you applied to HackTX.
                                 If you don't remember doing that or no longer wish to receive these emails, please send
-                                an email to <a href="mailto:hello@hacktx.com">hello@hacktx.com</a>.
+                                an email to <a href="mailto:hello@freetailhackers.com">hello@freetailhackers.com</a>.
                             </td>
                         </tr>
                         <tr>
