--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -21,7 +21,7 @@
                 <table class="main" width="100%" cellpadding="0" cellspacing="0">
                     <tr>
                         <td class="alert alert-neutral">
-                            <img src="{{ url_for('static', filename='branding/color_logo_small.png', _external=True) }}" width=183
+                            <img src="{{ url_for('static', filename='branding/logo_small.png', _external=True) }}" width=183
                                  height=50>
                         </td>
                     </tr>
