Changed email footer message

--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -38,7 +38,7 @@
                     <table width="100%">
                         <tr>
                             <td class="aligncenter content-block">{% block footer %}You are receiving this because you
-                                went to {{ config.HACKATHON_NAME }}. If you don't remember doing that or no longer wish
+                                showed interest in attending {{ config.HACKATHON_NAME }}. If you don't remember doing that or no longer wish
                                 to receive these emails, please send an email to
                                 <a href="mailto:{{ config.GENERAL_INFO_EMAIL }}">{{ config.GENERAL_INFO_EMAIL }}</a>
                                 .{% endblock %}</td>
