--- a/pepper/static/scss/_constants.scss
+++ b/pepper/static/scss/_constants.scss
@@ -3,6 +3,6 @@ $hacktx-light: #FFFFFF;
 $hacktx-light-red: #dc0925;
 $hacktx-red: #FF4115;
 $hacktx-light-blue: #7ba8f9;
-$sans-serif-font: Josefin Sans, sans-serif;
+$sans-serif-font: futura-pt, sans-serif;
 $desktop-width: 992px;
 $hacktx-gray: #bfbfbf;
