Added closed registration message and script for accepting single user by id

--- a/pepper/static/css/main.css
+++ b/pepper/static/css/main.css
@@ -609,4 +609,8 @@ input[type=text].fullwidth:focus, form input.fullwidth[type=number]:focus {
   padding: 1em;
 }
 
+#registration_closed_message {
+  display: inline-block;
+}
+
 /*# sourceMappingURL=main.css.map */
