--- a/pepper/templates/users/dashboard/pending.html
+++ b/pepper/templates/users/dashboard/pending.html
@@ -19,7 +19,7 @@
 {#			Page only runs when status is pending or late, and so else is only hit if status is late #}
             {% else %}
                 <p>Unfortunately, you have registered too late for regular acceptance into {{ config.HACKATHON_NAME }}. 
-                    You can still be accepted if you complete our puzzle challenge over here.
+                    We encourage you to solve some of our puzzles <a href="http://puzzles.hacktx.com/">here.</a>
                 </p>
             {% endif %}
         </div>
